--- a/.gitignore
+++ b/.gitignore
@@ -1,10 +1,8 @@
-# specific to this repo
-data/*
-!data/rxn*.log
-temp.txt
-*.debug
+# ide configuration
+.vscode
 
-# General Python .gitignore
+# temp files
+temp.py
 
 # Byte-compiled / optimized / DLL files
 __pycache__/
