add demo and speedup with optional wavefunction search

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -19,7 +19,7 @@ dependencies = []
 
 [project.optional-dependencies]
 dev = ["black", "isort", "pytest"]
-demos = ["jupyter"]
+demos = ["ase", "cclib"]
 
 [project.readme]
 file = "README.md"
