--- a/pyproject.toml
+++ b/pyproject.toml
@@ -4,7 +4,7 @@ build-backend = "setuptools.build_meta"
 
 [project]
 name = "fastlogfileparser"
-version = "1.0.0a2"
+version = "1.0.0a3"
 authors = [
     { name = "Jackson Burns" },
 ]
@@ -14,7 +14,7 @@ classifiers = [
     "Programming Language :: Python :: 3",
 ]
 urls = { Homepage = "https://github.com/QuantumPioneer/FastLogfileParser" }
-requires-python = ">=3.8,<3.12"
+requires-python = ">=3.8"
 dependencies = []
 
 [project.optional-dependencies]
