--- a/.github/workflows/CI.yml
+++ b/.github/workflows/CI.yml
@@ -105,7 +105,7 @@ jobs:
     name: Build and publish Python 🐍 distributions 📦 to PyPI
     runs-on: ubuntu-latest
     needs: [check-for-new-release, ci-report-status]
-    if: ${{ needs.check-for-new-release.outputs.do_publish == 'true' && github.ref == 'refs/heads/main' && github.repository == 'QuantumPioneer/dgsolvdb'}}
+    if: ${{ needs.check-for-new-release.outputs.do_publish == 'true' && github.ref == 'refs/heads/main' && github.repository == 'QuantumPioneer/FastLogfileParser'}}
     steps:
     - uses: actions/checkout@master
     - name: Set up Python 3.10
